@@ -405,11 +405,13 @@
         <include name="mscorlib.dll"/>
         <include name="System.dll"/>
         <include name="System.Core.dll"/>
+        <include name="System.Xml.dll"/>
         <include name="Caliburn.Core.dll"/>
+        <include name="Microsoft.Practices.ServiceLocation.dll"/>
+        <include name="System.ComponentModel.DataAnnotations.dll" />
         <include name="Caliburn.PresentationFramework.dll"/>
         <include name="Castle.Core.dll"/>
         <include name="Castle.DynamicProxy2.dll"/>
-        <include name="Microsoft.Practices.ServiceLocation.dll"/>
       </references>
       <nowarn>
         <warning number="1584"/>
