@@ -44,6 +44,9 @@
       <HintPath>..\..\lib\net-3.5\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -57,6 +60,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\ValidateConfiguration.cs" />
+    <Compile Include="Interceptors\DataErrorInfoInterceptor.cs" />
+    <Compile Include="Interceptors\ExceptionValidatorInterceptor.cs" />
     <Compile Include="Interceptors\IInitializableInterceptor.cs" />
     <Compile Include="Interceptors\InterceptorBase.cs" />
     <Compile Include="Configuration\BehaviorConfigurationBase.cs" />
