@@ -83,6 +83,7 @@
     <Compile Include="Behaviors\DoNotNotifyAttribute.cs" />
     <Compile Include="Behaviors\NotifyPropertyChangedAttribute.cs" />
     <Compile Include="Behaviors\ScreenAttribute.cs" />
+    <Compile Include="Behaviors\ValidateAttribute.cs" />
     <Compile Include="Conventions\DefaultViewConventionCategory.cs" />
     <Compile Include="Conventions\IViewConvention.cs" />
     <Compile Include="Conventions\IViewConventionCategory.cs" />
