@@ -7,12 +7,26 @@ namespace Caliburn.PresentationFramework.ViewModels
     using System.Linq;
     using System.Reflection;
     using Core;
+    using Core.Behaviors;
 
     /// <summary>
     /// The default implemenation of <see cref="IValidator"/>.
     /// </summary>
     public class DefaultValidator : IValidator
     {
+        /// <summary>
+        /// Indicates whether the specified property should be validated.
+        /// </summary>
+        /// <param name="property">The property.</param>
+        /// <returns>
+        /// true if should be validated; otherwise false
+        /// </returns>
+        public bool ShouldValidate(PropertyInfo property)
+        {
+            return EnsureProperty(property)
+                .GetAttributes<ValidationAttribute>(true).Any();
+        }
+
         /// <summary>
         /// Validates the specified instance.
         /// </summary>
@@ -39,9 +53,9 @@ namespace Caliburn.PresentationFramework.ViewModels
 
         private static IEnumerable<IValidationError> GetValidationErrors(object instance, PropertyInfo property)
         {
-            var propertyValue = property.GetValue(instance, null);
-            var validators = from attribute in property.GetAttributes<ValidationAttribute>(true)
-                             where !attribute.IsValid(propertyValue)
+            var validators = from attribute in EnsureProperty(property)
+                                 .GetAttributes<ValidationAttribute>(true)
+                             where !attribute.IsValid(property.GetValue(instance, null))
                              select new DefaultValidationError(
                                  instance,
                                  property.Name,
@@ -49,6 +63,13 @@ namespace Caliburn.PresentationFramework.ViewModels
                                  );
 
             return validators.OfType<IValidationError>();
+        }
+
+        private static PropertyInfo EnsureProperty(PropertyInfo info)
+        {
+            if (typeof(IProxy).IsAssignableFrom(info.DeclaringType))
+                return info.DeclaringType.BaseType.GetProperty(info.Name) ?? info;
+            return info;
         }
     }
 }
