@@ -1,12 +1,20 @@
 namespace Caliburn.PresentationFramework.ViewModels
 {
     using System.Collections.Generic;
+    using System.Reflection;
 
     /// <summary>
     /// A service that validates the state of classes and their properties.
     /// </summary>
     public interface IValidator
     {
+        /// <summary>
+        /// Inidcates whether the specified property should be validated.
+        /// </summary>
+        /// <param name="property">The property.</param>
+        /// <returns>true if should be validated; otherwise false</returns>
+        bool ShouldValidate(PropertyInfo property);
+
         /// <summary>
         /// Validates the specified instance.
         /// </summary>
