@@ -32,6 +32,8 @@ V2 Alpha
 -Enabled the WPF message parser to now bind action parameters for elements using a default binding.
 -Applied patch from rauh_ryan to Fixed some breaking changes in the HowToFluentlyConfigurePrism example.
 -Applied patch from rauh_ryan to improve the PrismModule configuration to resolve the IModuleManager and have the module catalog injected into it properly.
+-Created a Validate behavior which applies IDataErrorInfo in WPF and SL4 and uses an exception-based mechanism in SL3.
+-Enabled binding conventions to detect validation scenarios and configure the binding appropriately.
 
 V1.1 Release
 -Fixed an issue in the WPF version of InteractionNode.
